# sgpu

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
include/sgpu/: buffer.hpp  command_buffer.hpp  compute_pass.hpp  compute_pipeline.hpp  copy_pass.hpp  device.hpp  graphics_pipeline.hpp  handle.hpp  pass.hpp  render_pass.hpp  resource.hpp  sampler.hpp  sgpu.hpp  shader.hpp  texture.hpp  transfer_buffer.hpp
src/: buffer.cpp  command_buffer.cpp  compute_pass.cpp  compute_pipeline.cpp  copy_pass.cpp  device.cpp  graphics_pipeline.cpp  render_pass.cpp  sampler.cpp  shader.cpp  texture.cpp  transfer_buffer.cpp
